--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node -r dotenv/config dist/src/server.js",
+        "start": "node -r dotenv/config dist/index.js",
         "prepare": "npm run build && npm run test",
         "test": "mocha -r ts-node/register src/tests/**/*.test.ts",
         "coverage": "nyc mocha -r ts-node/register test/**/*.test.ts",
@@ -28,19 +28,20 @@
         "dotenv": "^8.2.0"
     },
     "devDependencies": {
+        "@types/chai": "^4.2.12",
         "@types/dotenv": "^8.2.0",
+        "@types/mocha": "^8.0.3",
+        "@types/node": "^14.11.2",
         "@types/prettier": "^2.1.1",
         "@typescript-eslint/eslint-plugin": "^4.3.0",
         "@typescript-eslint/parser": "^4.3.0",
-        "@types/chai": "^4.2.12",
-        "@types/mocha": "^8.0.3",
-        "prettier": "^2.1.2",
+        "chai": "^4.2.0",
+        "eslint": "^7.10.0",
+        "eslint-config-prettier": "^6.12.0",
         "mocha": "^8.1.3",
         "nyc": "^15.1.0",
-        "chai": "^4.2.0",
+        "prettier": "^2.1.2",
         "ts-node": "^9.0.0",
-        "typescript": "^4.0.3",
-        "eslint": "^7.10.0",
-        "eslint-config-prettier": "^6.12.0"
+        "typescript": "^4.0.3"
     }
 }
