--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "forever npm run dev",
-        "prepare": "npm run build && npm run test",
+        "start": "npm run dev",
+        "prepare": "npm run test",
         "test": "mocha -r ts-node/register src/tests/**/*.test.ts",
         "coverage": "nyc mocha -r ts-node/register test/**/*.test.ts",
         "build": "tsc -p ./tsconfig.json",
-        "dev": "npm run build && ts-node -r dotenv/config ./dist/index.ts",
+        "dev": "ts-node -r dotenv/config ./src/index.ts",
         "format": "prettier --write --config ./.prettierrc ./src",
         "lint": "eslint . --ext .ts"
     },
@@ -28,7 +28,6 @@
         "discord.js": "^12.3.1",
         "dotenv": "^8.2.0",
         "ffmpeg-static": "^4.2.7",
-        "forever": "^3.0.2",
         "ytdl-core": "^3.3.0"
     },
     "devDependencies": {
