--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "discord.js": "^12.3.1",
         "dotenv": "^8.2.0",
         "ffmpeg-static": "^4.2.7",
-        "ytdl-core": "^3.3.0"
+        "ytdl-core": "^3.3.0",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.0.3"
     },
     "devDependencies": {
         "@types/chai": "^4.2.12",
@@ -44,7 +46,5 @@
         "mocha": "^8.1.3",
         "nyc": "^15.1.0",
         "prettier": "^2.1.2",
-        "ts-node": "^9.0.0",
-        "typescript": "^4.0.3"
     }
 }
