--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
         "eslint-config-prettier": "^6.12.0",
         "mocha": "^8.1.3",
         "nyc": "^15.1.0",
-        "prettier": "^2.1.2",
+        "prettier": "^2.1.2"
     }
 }
