--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "build": "tsc -p ./tsconfig.json",
         "dev": "ts-node -r dotenv/config ./src/index.ts",
         "format": "prettier --write --config ./.prettierrc ./src",
-        "lint": "eslint . --ext .ts"
+        "lint": "eslint . --fix --ext .ts"
     },
     "repository": {
         "type": "git",
@@ -42,7 +42,9 @@
         "@typescript-eslint/parser": "^4.3.0",
         "chai": "^4.2.0",
         "eslint": "^7.10.0",
+        "eslint-config-airbnb-base": "^14.2.0",
         "eslint-config-prettier": "^6.12.0",
+        "eslint-plugin-import": "^2.22.1",
         "mocha": "^8.1.3",
         "nyc": "^15.1.0",
         "prettier": "^2.1.2"
