--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test": "mocha -r ts-node/register src/tests/**/*.test.ts",
         "coverage": "nyc mocha -r ts-node/register test/**/*.test.ts",
         "build": "tsc -p ./tsconfig.json",
-        "dev": "ts-node -r dotenv/config ./src/index.ts",
+        "dev": "ts-node -r dotenv/config ./src/server.ts",
         "format": "prettier --write --config ./.prettierrc ./src",
         "lint": "eslint . --fix --ext .ts"
     },
@@ -25,14 +25,18 @@
     "homepage": "https://github.com/Kumunite/Kumunite-Discord-Bot#readme",
     "dependencies": {
         "@discordjs/opus": "^0.3.2",
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.8",
+        "@types/loglevel": "^1.6.3",
+        "@types/node": "^14.11.2",
         "discord.js": "^12.3.1",
         "dotenv": "^8.2.0",
+        "express": "^4.17.1",
         "ffmpeg-static": "^4.2.7",
-        "ytdl-core": "^3.3.0",
+        "loglevel": "^1.7.0",
         "ts-node": "^9.0.0",
-        "@types/dotenv": "^8.2.0",
-        "@types/node": "^14.11.2",
-        "typescript": "^4.0.3"
+        "typescript": "^4.0.3",
+        "ytdl-core": "^3.3.0"
     },
     "devDependencies": {
         "@types/chai": "^4.2.12",
